tests/parser/package.2.bad.error
error: Malformed package declaration
  --> test:2:9
   |
 2 |  (package 5)
   |           ^ package name must be a symbol
